--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         работы по заказам, компания начисляет бонусы за пиковое время.
                         <br><br>
                         Мы одни из партнеров и зарекомендовали себя как одна из лучших 
-                        команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.
+                        команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 рублей в месяц.
                     </div>
                     <button class="promo_btn">
                         ОТПРАВИТЬ ЗАЯВКУ!
@@ -259,7 +259,7 @@
                 <div class="require_block">
                     <div class="require_title">УСЛОВИЯ: со своим авто:</div>
                     <ul class="require_list">
-                        <li>Подключаем к системе UBER  под 10%.</li>
+                        <li>Подключаем к системе UBER  под 10%</li>
                         <li>Ни каких взносов  0%!</li>
                         <li>Можем подключать удаленно без приезда в офис</li>
                         <li>ИП не требуется</li>
@@ -270,7 +270,7 @@
                         ми в офисе</li>
                     </ul>
                     <div class="require_descr">
-                        В день заработок составляет 7000-12000р + бонус 3000т<br> рублей
+                        В день заработок составляет 7000р-12000р+ бонус 3000р<br>
                     </div>
                 </div>
             </div>
