--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                     <div class="promo_descr">
                             Компания UBER  динамически развивающаяся. Компания на рынке 
-                        занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы 
+                        занимает лидирующее место среди таксомоторных компани. Компания абсолютно прозрачная вы можете контролировать все процессы 
                         у себя в личном кабинете. Бонуcная система. Помимо выполненной 
                         работы по заказам, компания начисляет бонусы за пиковое время.
                         <br><br>
                         Мы одни из партнеров и зарекомендовали себя как одна из лучших 
-                        команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 рублей в месяц.
+                        команд в городе Москве.  Водители у нас зарабатывают от 80000-120000 рублей в месяц.
                     </div>
                     <button class="promo_btn">
                         ОТПРАВИТЬ ЗАЯВКУ!
@@ -137,7 +137,8 @@
                                     <img src="icons/key3.png" alt="reasons">
                                 </div>
                                 <div class="reasons_descr">
-                                    <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
+                                    <div class="reasons_subtitle">Комфортное, прозрачное и простое 
+                                                                 ение</div>
                                     <div class="reasons_text">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
                                 </div>
                             </div>
